--- a/nicepage.css
+++ b/nicepage.css
@@ -36324,27 +36324,35 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 80px;
+  min-height: 112px;
 }
 
 .u-header .u-image-1 {
-  width: 124px;
-  height: 64px;
-  margin: 22px auto 26px 0;
+  width: 96px;
+  height: 49px;
+  margin: 32px auto 32px 301px;
 }
 
 .u-header .u-logo-image-1 {
   width: 100%;
   height: 100%;
 }
-@media (max-width: 1199px) {
+
+@media (max-width: 991px) {
   .u-header .u-image-1 {
-    width: 124px;
+    margin-left: 231px;
   }
 }
-
-
-
+@media (max-width: 767px) {
+  .u-header .u-image-1 {
+    margin-left: 173px;
+  }
+}
+@media (max-width: 575px) {
+  .u-header .u-image-1 {
+    margin-left: 109px;
+  }
+}
  .u-footer {
   background-image: none;
 }
