--- a/nicepage.css
+++ b/nicepage.css
@@ -36330,7 +36330,7 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-image-1 {
   width: 96px;
   height: 49px;
-  margin: 32px auto 32px 301px;
+  margin: 32px auto 32px 271px;
 }
 
 .u-header .u-logo-image-1 {
@@ -36340,25 +36340,46 @@ a.u-link.u-text-hover-grey-90:hover {
 
 @media (max-width: 991px) {
   .u-header .u-image-1 {
-    margin-left: 231px;
+    margin-left: 208px;
   }
 }
 @media (max-width: 767px) {
   .u-header .u-image-1 {
-    margin-left: 173px;
+    margin-left: 156px;
   }
 }
 @media (max-width: 575px) {
   .u-header .u-image-1 {
-    margin-left: 109px;
+    margin-left: 98px;
   }
 }
- .u-footer {
-  background-image: none;
-}
-
 .u-footer .u-sheet-1 {
   min-height: 120px;
+}
+
+.u-footer .u-social-icons-1 {
+  height: 32px;
+  min-height: 16px;
+  width: 158px;
+  min-width: 94px;
+  white-space: nowrap;
+  margin: 44px auto;
+}
+
+.u-footer .u-icon-1 {
+  color: rgb(59, 89, 152) !important;
+}
+
+.u-footer .u-icon-2 {
+  color: rgb(85, 172, 238) !important;
+}
+
+.u-footer .u-icon-3 {
+  color: rgb(197, 54, 164) !important;
+}
+
+.u-footer .u-icon-4 {
+  color: rgb(0, 122, 185) !important;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
