--- a/Главная.css
+++ b/Главная.css
@@ -3,14 +3,14 @@
 }
 
 .u-section-1 .u-list-1 {
-  width: 550px;
-  margin: 54px auto 0;
+  width: 626px;
+  margin: 99px 236px 0 auto;
 }
 
 .u-section-1 .u-repeater-1 {
   grid-template-columns: calc(50% - 5px) calc(50% - 5px);
   grid-gap: 10px 10px;
-  min-height: 604px;
+  min-height: 562px;
 }
 
 .u-section-1 .u-list-item-1 {
@@ -28,7 +28,7 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 11px 9px 0 0;
+  margin: 51px 9px 0 0;
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -42,7 +42,7 @@
 }
 
 .u-section-1 .u-text-4 {
-  margin: 11px 9px 0 0;
+  margin: 51px 9px 0 0;
 }
 
 .u-section-1 .u-container-layout-3 {
@@ -56,7 +56,7 @@
 }
 
 .u-section-1 .u-text-6 {
-  margin: 11px 9px 0 0;
+  margin: 51px 9px 0 0;
 }
 
 .u-section-1 .u-list-item-4 {
@@ -74,18 +74,24 @@
 }
 
 .u-section-1 .u-text-8 {
-  margin: 11px 9px 0 0;
+  margin: 51px 9px 0 0;
 }
 
-.u-section-1 .u-image-1 {
-  width: 800px;
-  min-height: 487px;
-  background-image: url("images/11.jpg");
-  margin: 30px auto 43px;
+.u-section-1 .u-group-1 {
+  width: 831px;
+  min-height: 431px;
+  height: auto;
+  margin: 63px 121px 60px auto;
 }
 
 .u-section-1 .u-container-layout-5 {
   padding: 0;
+}
+
+.u-section-1 .u-image-1 {
+  width: 653px;
+  height: 351px;
+  margin: 40px auto 0;
 }
 
 @media (max-width: 1199px) {
@@ -96,6 +102,12 @@
   .u-section-1 .u-repeater-1 {
     grid-template-columns: calc(25% - 7.5px) calc(25% - 7.5px) calc(25% - 7.5px) calc(25% - 7.5px);
   }
+
+  .u-section-1 .u-group-1 {
+    margin-right: 109px;
+    background-position: 50% 50%;
+    height: auto;
+  }
 }
 
 @media (max-width: 991px) {
@@ -103,12 +115,17 @@
     min-height: 900px;
   }
 
+  .u-section-1 .u-list-1 {
+    margin-right: 94px;
+  }
+
   .u-section-1 .u-repeater-1 {
     grid-template-columns: calc(50% - 5px) calc(50% - 5px);
   }
 
-  .u-section-1 .u-image-1 {
+  .u-section-1 .u-group-1 {
     width: 720px;
+    margin-right: 0;
   }
 }
 
@@ -119,6 +136,7 @@
 
   .u-section-1 .u-list-1 {
     width: 540px;
+    margin-right: 0;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -126,9 +144,17 @@
     padding-right: 10px;
   }
 
+  .u-section-1 .u-text-2 {
+    margin-right: 0;
+  }
+
   .u-section-1 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-right: 0;
   }
 
   .u-section-1 .u-container-layout-3 {
@@ -136,13 +162,26 @@
     padding-right: 10px;
   }
 
+  .u-section-1 .u-text-6 {
+    margin-right: 0;
+  }
+
   .u-section-1 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
+  .u-section-1 .u-text-8 {
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-group-1 {
+    width: 540px;
+  }
+
   .u-section-1 .u-image-1 {
     width: 540px;
+    height: 290px;
   }
 }
 
@@ -159,32 +198,23 @@
     grid-template-columns: 100%;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-text-6 {
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-text-8 {
-    margin-right: 0;
+  .u-section-1 .u-group-1 {
+    width: 340px;
   }
 
   .u-section-1 .u-image-1 {
     width: 340px;
+    height: 183px;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 609px;
+  min-height: 1463px;
 }
 
 .u-section-2 .u-tabs-1 {
-  min-height: 404px;
-  margin: 60px auto 59px 0;
+  min-height: 299px;
+  width: 667px;
+  height: auto;
+  margin: 60px 207px 60px auto;
 }
 
 .u-section-2 .u-tab-item-1 {
@@ -193,10 +223,8 @@
 }
 
 .u-section-2 .u-tab-link-1 {
+  font-weight: 700;
   font-size: 1.25rem;
-  background-image: none;
-  font-weight: 600;
-  padding: 10px 25px;
 }
 
 .u-section-2 .u-tab-item-2 {
@@ -207,30 +235,47 @@
 .u-section-2 .u-tab-link-2 {
   font-size: 1.25rem;
   background-image: none;
-  font-weight: 600;
+  font-weight: 700;
   padding: 10px 25px;
+}
+
+.u-section-2 .u-tab-item-3 {
+  margin-top: 0;
+  margin-bottom: 5px;
 }
 
 .u-section-2 .u-tab-link-3 {
   font-size: 1.25rem;
   background-image: none;
-  font-weight: 600;
+  font-weight: 700;
   padding: 10px 25px;
 }
 
 .u-section-2 .u-tab-item-4 {
+  margin-top: 0;
   margin-bottom: 0;
 }
 
 .u-section-2 .u-tab-link-4 {
   font-size: 1.25rem;
   background-image: none;
-  font-weight: 600;
+  font-weight: 700;
+  padding: 10px 25px;
+}
+
+.u-section-2 .u-tab-item-5 {
+  margin-bottom: 5px;
+  margin-top: 0;
+}
+
+.u-section-2 .u-tab-link-5 {
+  font-size: 1.25rem;
+  background-image: none;
+  font-weight: 700;
   padding: 10px 25px;
 }
 
 .u-section-2 .u-tab-pane-1 {
-  background-image: none;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -240,19 +285,8 @@
 }
 
 .u-section-2 .u-text-1 {
-  text-transform: uppercase;
-  margin: 0 954px 0 0;
-}
-
-.u-section-2 .u-line-1 {
-  height: 3px;
-  transform-origin: left center;
-  margin: 10px auto 0 0;
-}
-
-.u-section-2 .u-text-2 {
-  line-height: 1.8;
-  margin: 30px 505px 0 0;
+  margin-bottom: 0;
+  margin-top: 43px;
 }
 
 .u-section-2 .u-tab-pane-2 {
@@ -262,10 +296,34 @@
 }
 
 .u-section-2 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-2 .u-line-1 {
+  height: 3px;
+  transform-origin: left center 0px;
+  margin: 0 auto 0 0;
+}
+
+.u-section-2 .u-btn-1 {
+  letter-spacing: 1px;
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 16px auto 0 11px;
+}
+
+.u-section-2 .u-tab-pane-3 {
+  background-image: none;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-container-layout-3 {
   padding: 30px 0;
 }
 
-.u-section-2 .u-text-3 {
+.u-section-2 .u-text-2 {
   text-transform: uppercase;
   margin: 0 auto 0 30px;
 }
@@ -276,104 +334,91 @@
   margin: 11px auto 0 30px;
 }
 
-.u-section-2 .u-text-4 {
-  line-height: 1.8;
-  margin: 0;
-}
-
-.u-section-2 .u-tab-pane-3 {
-  background-image: none;
-}
-
-.u-section-2 .u-container-layout-3 {
-  padding: 30px;
-}
-
-.u-section-2 .u-text-5 {
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-top: 0;
-}
-
 .u-section-2 .u-tab-pane-4 {
   background-image: none;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-2 .u-container-layout-4 {
   padding: 30px;
 }
 
-.u-section-2 .u-btn-1 {
-  margin: 0 auto 0 12px;
+.u-section-2 .u-text-3 {
+  margin-left: 0;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.u-section-2 .u-tab-pane-5 {
+  background-image: none;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-container-layout-5 {
+  padding: 30px;
+}
+
+.u-section-2 .u-btn-2 {
+  margin: 17px auto 0 19px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-2 .u-tabs-1 {
-    height: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-right: 754px;
-  }
-
   .u-section-2 .u-line-1 {
     margin-right: initial;
     margin-left: initial;
-  }
-
-  .u-section-2 .u-text-2 {
-    margin-right: 305px;
   }
 
   .u-section-2 .u-line-2 {
     margin-right: initial;
     margin-left: initial;
   }
-
-  .u-section-2 .u-btn-1 {
-    margin-left: 0;
-  }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-text-1 {
-    margin-right: 534px;
-  }
-
-  .u-section-2 .u-text-2 {
-    margin-right: 85px;
+  .u-section-2 .u-tabs-1 {
+    margin-right: 53px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-2 .u-tabs-1 {
+    width: 540px;
+    margin-right: 0;
+  }
+
   .u-section-2 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-text-1 {
-    margin-right: 394px;
-  }
-
-  .u-section-2 .u-text-2 {
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-container-layout-3 {
+  .u-section-2 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-left: 0;
   }
 
   .u-section-2 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
+
+  .u-section-2 .u-container-layout-5 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-left: 0;
+  }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-text-1 {
-    margin-right: 194px;
+  .u-section-2 .u-tabs-1 {
+    width: 340px;
   }
 }
