--- a/Главная.css
+++ b/Главная.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 1290px;
+  min-height: 1307px;
 }
 
 .u-section-1 .u-list-1 {
@@ -18,45 +18,92 @@
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 30px 30px 0;
+  padding: 30px 0 0;
 }
 
 .u-section-1 .u-text-1 {
   font-weight: 700;
   font-size: 1.25rem;
-  margin: 0 auto 0 0;
+  margin: 0 auto 0 30px;
 }
 
 .u-section-1 .u-text-2 {
-  margin: 51px 9px 0 0;
+  width: 239px;
+  margin: 12px auto 0;
+}
+
+.u-section-1 .u-btn-1 {
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.u-section-1 .u-icon-1 {
+  font-size: 0.2858em;
 }
 
 .u-section-1 .u-container-layout-2 {
-  padding: 30px 30px 0;
+  padding: 30px 0 0;
 }
 
 .u-section-1 .u-text-3 {
   font-weight: 700;
   font-size: 1.25rem;
-  margin: 0 auto 0 0;
+  margin: 0 auto 0 30px;
 }
 
 .u-section-1 .u-text-4 {
-  margin: 51px 9px 0 0;
+  width: 239px;
+  margin: 12px auto 0;
+}
+
+.u-section-1 .u-btn-2 {
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.u-section-1 .u-icon-2 {
+  font-size: 0.2858em;
 }
 
 .u-section-1 .u-container-layout-3 {
-  padding: 30px 30px 0;
+  padding: 30px 0 0;
 }
 
 .u-section-1 .u-text-5 {
   font-weight: 700;
   font-size: 1.25rem;
-  margin: 0 auto 0 0;
+  margin: 0 auto 0 30px;
 }
 
 .u-section-1 .u-text-6 {
-  margin: 51px 9px 0 0;
+  width: 239px;
+  margin: 12px auto 0;
+}
+
+.u-section-1 .u-btn-3 {
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.u-section-1 .u-icon-3 {
+  font-size: 3.9286em;
+  width: 166px;
+  height: 75px;
 }
 
 .u-section-1 .u-list-item-4 {
@@ -64,23 +111,38 @@
 }
 
 .u-section-1 .u-container-layout-4 {
-  padding: 30px 30px 0;
+  padding: 30px 0 0;
 }
 
 .u-section-1 .u-text-7 {
   font-weight: 700;
   font-size: 1.25rem;
-  margin: 0 auto 0 0;
+  margin: 0 auto 0 30px;
 }
 
 .u-section-1 .u-text-8 {
-  margin: 51px 9px 0 0;
+  width: 239px;
+  margin: 12px auto 0;
+}
+
+.u-section-1 .u-btn-4 {
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.u-section-1 .u-icon-4 {
+  font-size: 0.2858em;
 }
 
 .u-section-1 .u-text-9 {
   font-weight: 900;
   font-size: 1.875rem;
-  margin: 79px 279px 0 auto;
+  margin: 96px 279px 0 auto;
 }
 
 .u-section-1 .u-group-1 {
@@ -134,42 +196,6 @@
 @media (max-width: 767px) {
   .u-section-1 .u-list-1 {
     width: 540px;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-1 .u-text-6 {
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-1 .u-text-8 {
     margin-right: 0;
   }
 
